RESOLVED FIXED115056
Web process crashes at WebPage::determinePrimarySnapshottedPlugInTimerFired + 8
https://bugs.webkit.org/show_bug.cgi?id=115056
Summary Web process crashes at WebPage::determinePrimarySnapshottedPlugInTimerFired + 8
Tim Horton
Reported 2013-04-23 14:00:17 PDT
<rdar://problem/13719543> I *think* the timer is firing after the page is torn down. Easy fix.
Attachments
patch (1.30 KB, patch)
2013-04-23 14:01 PDT, Tim Horton
simon.fraser: review+
take 2 (1.68 KB, patch)
2013-05-03 04:43 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2013-04-23 14:01:34 PDT
Tim Horton
Comment 2 2013-04-23 14:04:17 PDT
Tim Horton
Comment 3 2013-05-03 04:37:53 PDT
Maybe not.
Tim Horton
Comment 4 2013-05-03 04:43:14 PDT
Tim Horton
Comment 5 2013-05-03 13:57:12 PDT
Note You need to log in before you can comment on or make changes to this bug.