Web process crashes at WebPage::determinePrimarySnapshottedPlugInTimerFired + 8 https://bugs.webkit.org/show_bug.cgi?id=115056 <rdar://problem/13719543>

Reviewed by Simon Fraser.

Stop the primary plugin detection timer if the WebPage is torn down.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::close):


Canonical link: https://commits.webkit.org/133490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148991 268f45cc-cd09-0410-ab3c-d52691b4dbfc